--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,16 +3,20 @@ name: Docker Image CI - for opg-pages
 on:
   push:
     branches: [ "opg-master" ]
-  pull_request:
-    branches: [ "opg-master" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
+    - name: Login to Github Packages
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
     - name: Build the Docker image
-      run: docker build --build-arg PROXY_BACKEND=http://opg-pages/ . --file Dockerfile --tag osmapp:$(date +%s)
+      if: github.ref == 'refs/heads/opg-master'
+      run: |
+        docker build --build-arg PROXY_BACKEND=http://opg-pages/ . --file Dockerfile --tag ghcr.io/openplaceguide/osmapp:latest
+        docker push ghcr.io/openplaceguide/osmapp:latest
